kubernetes/apps/database/elephant/app/network-policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: elephant-network-policy
spec:
  endpointSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: &clusterName elephant
  ingress:
    # Allow himself
    - fromEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: *clusterName
    # Userinit
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: crunchy-userinit-controller
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Harbor
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: infrastructure
            app.kubernetes.io/instance: harbor
        - matchExpressions:
            - key: app.kubernetes.io/component
              operator: In
              values:
                - core
                - exporter
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # App
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: app
            access: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  egress:
    # pgBackrest
    - toFQDNs:
        - matchName: "truenas.samoth.eu"
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toCIDR:
        - 192.168.0.22/32
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    # Allow himself
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: *clusterName
